<resources>
    <string name="setup_wizard_next_button_label">Next</string>
    <string name="setup_wizard_back_button_label">Back</string>
    <string name="additional_system_update"></string>
    <string name="additional_system_update_menu"></string>
    <string name="input_method_selector_show_automatically_value">0</string>
    <string name="input_method_selector_always_show_value">1</string>
    <string name="input_method_selector_always_hide_value">2</string>
    <string name="input_method_selector_visibility_default_value">0</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="create">Create</string>
    <string name="allow">Allow</string>
    <string name="deny">Deny</string>
    <string name="device_info_default">Unknown</string>
    <string name="show_dev_on">You are now a developer!</string>
    <string name="show_dev_already">No need, you are already a developer.</string>
    <string name="header_category_wireless_networks">Wireless &amp; networks</string>
    <string name="header_category_connections">Connections</string>
    <string name="header_category_device">Device</string>
    <string name="header_category_personal">Personal</string>
    <string name="header_category_access">Access</string>
    <string name="header_category_system">System</string>
    <string name="turn_on_radio">Turn on radio</string>
    <string name="turn_off_radio">Turn off radio</string>
    <string name="sms_over_ims_on">Turn on SMS over IMS</string>
    <string name="sms_over_ims_off">Turn off SMS over IMS</string>
    <string name="ims_reg_required_on">Turn on IMS registration required</string>
    <string name="ims_reg_required_off">Turn off IMS registration required</string>
    <string name="lte_ram_dump_on">Turn on lte ram dump</string>
    <string name="lte_ram_dump_off">Turn off lte ram dump</string>
    <string name="radioInfo_menu_viewADN">View SIM address book</string>
    <string name="radioInfo_menu_viewFDN">View Fixed Dialing Numbers</string>
    <string name="radioInfo_menu_viewSDN">View Service Dialing Numbers</string>
    <string name="radioInfo_menu_getPDP">Get PDP list</string>
    <string name="radioInfo_service_in">In service</string>
    <string name="radioInfo_service_out">Out of service</string>
    <string name="radioInfo_service_emergency">Emergency calls only</string>
    <string name="radioInfo_service_off">Radio off</string>
    <string name="radioInfo_roaming_in">Roaming</string>
    <string name="radioInfo_roaming_not">Not roaming</string>
    <string name="radioInfo_phone_idle">Idle</string>
    <string name="radioInfo_phone_ringing">Ringing</string>
    <string name="radioInfo_phone_offhook">Call in progress</string>
    <string name="radioInfo_data_disconnected">Disconnected</string>
    <string name="radioInfo_data_connecting">Connecting</string>
    <string name="radioInfo_data_connected">Connected</string>
    <string name="radioInfo_data_suspended">Suspended</string>
    <string name="radioInfo_unknown">unknown</string>
    <string name="radioInfo_display_packets">pkts</string>
    <string name="radioInfo_display_bytes">bytes</string>
    <string name="radioInfo_display_dbm">dBm</string>
    <string name="radioInfo_display_asu">asu</string>
    <string name="radioInfo_lac">LAC</string>
    <string name="radioInfo_cid">CID</string>
    <string name="sdcard_unmount">Unmount USB storage</string>
    <string name="sdcard_format">Erase USB storage</string>
    <string name="small_font">Small</string>
    <string name="medium_font">Medium</string>
    <string name="large_font">Large</string>
    <string name="font_size_preview_text">Servez à ce monsieur une bière et des kiwis.</string>
    <string name="font_size_save">OK</string>
    <string name="sdcard_setting">USB storage</string>
    <string name="battery_info_status_label">Battery status:</string>
    <string name="battery_info_power_label">Power plug:</string>
    <string name="battery_info_scale_label">Battery scale:</string>
    <string name="battery_info_level_label">Battery level:</string>
    <string name="battery_info_health_label">Battery health:</string>
    <string name="battery_info_technology_label">Battery technology:</string>
    <string name="battery_info_voltage_label">Battery voltage:</string>
    <string name="battery_info_voltage_units">mV</string>
    <string name="battery_info_temperature_label">Battery temperature:</string>
    <string name="battery_info_temperature_units">° C</string>
    <string name="battery_info_uptime">Time since boot:</string>
    <string name="battery_info_awake_battery">Awake time on battery:</string>
    <string name="battery_info_awake_plugged">Awake time when charging:</string>
    <string name="battery_info_screen_on">Screen ON time:</string>
    <string name="battery_info_status_unknown">Unknown</string>
    <string name="battery_info_status_charging">Charging</string>
    <string name="battery_info_status_charging_ac">Charging on AC</string>
    <string name="battery_info_status_charging_usb">Charging over USB</string>
    <string name="battery_info_status_charging_wireless">Charging wirelessly</string>
    <string name="battery_info_status_discharging">Not charging</string>
    <string name="battery_info_status_not_charging">Not charging</string>
    <string name="battery_info_status_full">Full</string>
    <string name="battery_info_power_unplugged">Unplugged</string>
    <string name="battery_info_power_ac">AC</string>
    <string name="battery_info_power_usb">USB</string>
    <string name="battery_info_power_wireless">wireless</string>
    <string name="battery_info_power_ac_usb">AC+USB</string>
    <string name="battery_info_power_unknown">Unknown</string>
    <string name="battery_info_health_unknown">Unknown</string>
    <string name="battery_info_health_good">Good</string>
    <string name="battery_info_health_overheat">Overheat</string>
    <string name="battery_info_health_dead">Dead</string>
    <string name="battery_info_health_over_voltage">Over voltage</string>
    <string name="proxy_settings_title">Proxy</string>
    <string name="airplane_mode">Airplane mode</string>
    <string name="radio_controls_title">More</string>
    <string name="show_owner_info_on_lockscreen_label">Show owner info on lock screen</string>
    <string name="owner_info_settings_edit_text_hint">Type text to display on the lock screen</string>
    <string name="bluetooth_pairing_key_msg">Pairing code</string>
    <string name="bluetooth_enter_passkey_msg">Type the pairing code then press Return or Enter</string>
    <string name="bluetooth_pairing_will_share_phonebook">Pairing grants access to your contacts and call history when connected.</string>
    <string name="wifi_assistant_intro_setup">Introducing\nWi‑Fi Assistant</string>
    <string name="wifi_assistant_no_thanks">NO, THANKS</string>
    <string name="wifi_assistant_setup">SET UP</string>
    <string name="wifi_display_settings_title">Cast screen</string>
    <string name="nfc_quick_toggle_title">NFC</string>
    <string name="nfc_quick_toggle_summary">Allow data exchange when the phone touches another device</string>
    <string name="android_beam_settings_title">Android Beam</string>
    <string name="nsd_quick_toggle_title">Network service discovery</string>
    <string name="nsd_quick_toggle_summary">Allow apps on other devices to discover apps on this device</string>
    <string name="wifi_ssid_hint">Enter the SSID</string>
    <string name="display_settings">Display</string>
    <string name="brightness">Brightness level</string>
    <string name="auto_brightness_title">Adaptive brightness</string>
    <string name="auto_brightness_summary">Optimize brightness level for available light</string>
    <string name="screen_timeout">Sleep</string>
    <string name="screen_timeout_summary">After %1$s of inactivity</string>
    <string name="wallpaper_settings_title">Wallpaper</string>
    <string name="screensaver_settings_title">Daydream</string>
    <string name="lift_to_wake_title">Lift to wake</string>
    <string name="doze_title">Ambient display</string>
    <string name="doze_summary">Wake screen when device picked up or notifications arrive</string>
    <string name="title_font_size">Font size</string>
    <string name="summary_font_size">%1$s</string>
    <string name="dialog_title_font_size">Font size</string>
    <string name="master_clear_title">Factory data reset</string>
    <string name="master_clear_summary">Erases all data on phone</string>
    <string name="tether_settings_title_all">Tethering &amp; portable hotspot</string>
    <string name="network_settings_title">Cellular networks</string>
    <string name="manage_mobile_plan_title">Mobile plan</string>
    <string name="sms_application_title">Default SMS app</string>
    <string name="details_subtitle">Use details</string>
    <string name="controls_subtitle">Adjust power use</string>
    <string name="packages_subtitle">Included packages</string>
    <string name="vpn_settings_title">VPN</string>
    <string name="emergency_tone_title">Emergency tone</string>
    <string name="privacy_settings_title">Backup &amp; reset</string>
    <string name="backup_section_title">Backup &amp; restore</string>
    <string name="personal_data_section_title">Personal data</string>
    <string name="backup_data_title">Back up my data</string>
    <string name="backup_data_summary">Back up app data, Wi-Fi passwords, and other settings to Google servers</string>
    <string name="backup_configure_account_title">Backup account</string>
    <string name="backup_configure_account_default_summary">No account is currently storing backed up data</string>
    <string name="auto_restore_title">Automatic restore</string>
    <string name="auto_restore_summary">When reinstalling an app, restore backed up settings and data</string>
    <string name="wimax_settings">4G</string>
    <string name="user_nickname">Nickname</string>
    <string name="cell_broadcast_settings">Emergency broadcasts</string>
    <string name="sim_editor_name">SIM name</string>
    <string name="sim_editor_carrier">Carrier</string>
    <string name="sim_editor_number">Number</string>
    <string name="sim_editor_num_format">Display numbers</string>
    <string name="keywords_more_default_sms_app">text message</string>
    <string name="keywords_more_mobile_networks">cellular cell carrier wireless</string>
    <string name="keywords_display">screen touchscreen</string>
    <string name="keywords_display_brightness_level">dim screen touchscreen</string>
    <string name="keywords_display_auto_brightness">dim screen touchscreen</string>
    <string name="keywords_display_wallpaper">background</string>
    <string name="keywords_display_font_size">text size</string>
    <string name="keywords_display_cast_screen">project</string>
    <string name="keywords_factory_data_reset">wipe delete</string>
    <string name="lock_screen_notifications_summary_show">Show all notification content</string>
    <string name="lock_screen_notifications_summary_hide">Hide sensitive notification content</string>
    <string name="lock_screen_notifications_summary_disable">Don\'t show notifications at all</string>
    <string name="lock_screen_notifications_interstitial_message">When your device is locked, how do you want notifications to show?</string>
    <string name="other_sound_settings">Other sounds</string>
    <string name="dial_pad_tones_title">Dial pad tones</string>
    <string name="screen_locking_sounds_title">Screen locking sounds</string>
    <string name="docking_sounds_title">Docking sounds</string>
    <string name="touch_sounds_title">Touch sounds</string>
    <string name="vibrate_on_touch_title">Vibrate on touch</string>
    <string name="dock_audio_media_title">Dock speaker plays</string>
    <string name="display_auto_rotate_title">When device is rotated</string>
</resources>