<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/com.android.settings" settings:title="@string/display_settings" settings:keywords="@string/keywords_display"
    <PreferenceScreen settings:title="@string/brightness" settings:key="brightness" settings:keywords="@string/keywords_display_brightness_level">
        <intent settings:action="android.intent.action.SHOW_BRIGHTNESS_DIALOG" />
    </PreferenceScreen>
    <SwitchPreference settings:persistent="false" settings:title="@string/auto_brightness_title" settings:key="auto_brightness" settings:summary="@string/auto_brightness_summary" settings:keywords="@string/keywords_display_auto_brightness" />
    <PreferenceScreen settings:title="@string/wallpaper_settings_title" settings:key="wallpaper" settings:fragment="com.android.settings.WallpaperTypeSettings" settings:keywords="@string/keywords_display_wallpaper" />
    <ListPreference settings:persistent="false" settings:entries="@array/screen_timeout_entries" settings:title="@string/screen_timeout" settings:key="screen_timeout" settings:summary="@string/screen_timeout_summary" settings:entryValues="@array/screen_timeout_values" />
    <PreferenceScreen settings:title="@string/screensaver_settings_title" settings:key="screensaver" settings:fragment="com.android.settings.DreamSettings" />
    <SwitchPreference settings:persistent="false" settings:title="@string/lift_to_wake_title" settings:key="lift_to_wake" />
    <SwitchPreference settings:persistent="false" settings:title="@string/doze_title" settings:key="doze" settings:summary="@string/doze_summary" />
    <com.android.settings.WarnedListPreference settings:entries="@array/entries_font_size" settings:title="@string/title_font_size" settings:key="font_size" settings:summary="@string/summary_font_size" settings:dialogTitle="@string/dialog_title_font_size" settings:entryValues="@array/entryvalues_font_size" settings:keywords="@string/keywords_display_font_size" />
    <com.android.settings.notification.DropDownPreference settings:title="@string/display_auto_rotate_title" settings:key="auto_rotate" />
    <PreferenceScreen settings:title="@string/wifi_display_settings_title" settings:key="wifi_display" settings:fragment="com.android.settings.wfd.WifiDisplaySettings" settings:keywords="@string/keywords_display_cast_screen" /> />
