<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" android:scrollbarStyle="UNKNOWN_DATA_0x7f0c0007" android:clipToPadding="false" android:layout_width="match_parent" android:layout_height="match_parent">
    <LinearLayout android:orientation="vertical" android:id="@id/all_details" android:paddingTop="5dp" android:paddingBottom="5dp" android:layout_width="match_parent" android:layout_height="match_parent" android:paddingStart="?unknown_attr_ref: 10103bd" android:paddingEnd="?unknown_attr_ref: 10103be">
        <include layout="@layout/app_percentage_item" />
        <LinearLayout android:orientation="vertical" android:id="@id/two_buttons_panel" android:paddingBottom="6dp" android:layout_width="match_parent" android:layout_height="wrap_content">
            <include layout="@layout/two_buttons_panel" />
        </LinearLayout>
        <TextView android:text="@string/details_subtitle" style="?unknown_attr_ref: 1010208" />
        <LinearLayout android:orientation="vertical" android:id="@id/details" android:layout_width="match_parent" android:layout_height="wrap_content" android:paddingStart="6dp" />
        <LinearLayout android:orientation="vertical" android:id="@id/controls" android:layout_width="match_parent" android:layout_height="wrap_content">
            <TextView android:id="@id/controls_title" android:layout_marginTop="6dp" android:text="@string/controls_subtitle" style="?unknown_attr_ref: 1010208" />
        </LinearLayout>
        <LinearLayout android:orientation="vertical" android:id="@id/messages" android:layout_width="match_parent" android:layout_height="wrap_content">
            <TextView android:id="@id/messages_title" android:layout_marginTop="6dp" style="?unknown_attr_ref: 1010208" />
        </LinearLayout>
        <TextView android:id="@id/packages_section_title" android:layout_marginTop="6dp" android:text="@string/packages_subtitle" style="?unknown_attr_ref: 1010208" />
        <LinearLayout android:orientation="vertical" android:id="@id/packages_section" android:layout_width="match_parent" android:layout_height="wrap_content" android:paddingStart="6dp" /> />
</ScrollView>
