<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical" android:background="0x106000b" android:scrollbars="vertical" android:layout_width="match_parent" android:layout_height="wrap_content">
    <ScrollView android:scrollbarStyle="outsideOverlay" android:layout_width="match_parent" android:layout_height="match_parent" android:fillViewport="true">
        <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content" android:paddingStart="?unknown_attr_ref: 10103bd" android:paddingEnd="?unknown_attr_ref: 10103be">
            <View android:background="#ff404040" android:paddingTop="53dp" android:layout_width="match_parent" android:layout_height="UNKNOWN_DATA_0x101" />
            <EditText android:gravity="top|bottom|center_vertical|fill_vertical|center|fill" android:id="@id/owner_info_nickname" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="8dp" android:hint="@string/user_nickname" android:inputType="text|textCapCharacters|textCapWords|textCapSentences|textAutoCorrect|textAutoComplete|textMultiLine|textImeMultiLine|textNoSuggestions|textUri|textEmailAddress|textEmailSubject|textShortMessage|textLongMessage|textPersonName|textPostalAddress|textPassword|textVisiblePassword|textWebEditText|textFilter|textPhonetic|textWebEmailAddress|textWebPassword|numberDecimal|phone" />
            <CheckBox android:textAppearance="?unknown_attr_ref: 1010041" android:textColor="?unknown_attr_ref: 1010038" android:gravity="top|bottom|center_vertical|fill_vertical|center|fill" android:id="@id/show_owner_info_on_lockscreen_checkbox" android:layout_width="match_parent" android:layout_height="UNKNOWN_DATA_0x4001" android:layout_marginTop="8dp" android:text="@string/show_owner_info_on_lockscreen_label" />
            <View android:background="#ff404040" android:layout_width="match_parent" android:layout_height="UNKNOWN_DATA_0x101" />
            <EditText android:gravity="top|bottom|center_vertical|fill_vertical|center|fill" android:id="@id/owner_info_edit_text" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="40dp" android:hint="@string/owner_info_settings_edit_text_hint" android:maxLines="8" android:lines="8" android:inputType="text|textCapCharacters|textCapWords|textCapSentences|textAutoCorrect|textAutoComplete|textMultiLine|textImeMultiLine|textNoSuggestions|textUri|textEmailAddress|textEmailSubject|textShortMessage|textLongMessage|textPersonName|textPostalAddress|textPassword|textVisiblePassword|textWebEditText|textFilter|textPhonetic|textWebEmailAddress|textWebPassword|phone" android:layout_marginStart="62dp" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
