<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent" android:layout_height="match_parent">
    <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent" android:paddingStart="16dp">
        <TextView android:textAppearance="@*android:style/TextAppearance.Material.Body1" android:textColor="0x1060126" android:gravity="top|bottom|center_vertical|fill_vertical|center|fill" android:id="@id/message_caption" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/bluetooth_dialog_padding" android:layout_marginStart="@dimen/bluetooth_dialog_padding" android:layout_marginEnd="@dimen/bluetooth_dialog_padding" />
        <TextView android:textAppearance="@*android:style/TextAppearance.Material.Subhead" android:gravity="top|bottom|center_vertical|fill_vertical|center|fill" android:id="@id/message_subhead" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/bluetooth_dialog_padding" android:layout_marginStart="@dimen/bluetooth_dialog_padding" android:layout_marginEnd="@dimen/bluetooth_dialog_padding" />
        <TextView android:textAppearance="@*android:style/TextAppearance.Material.Body1" android:textColor="0x1060126" android:gravity="top|bottom|center_vertical|fill_vertical|center|fill" android:id="@id/pairing_caption" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/bluetooth_pairing_key_msg" android:layout_marginStart="@dimen/bluetooth_dialog_padding" android:layout_marginEnd="@dimen/bluetooth_dialog_padding" />
        <TextView android:textAppearance="@*android:style/TextAppearance.Material.Headline" android:gravity="top|bottom|center_vertical|fill_vertical|center|fill" android:id="@id/pairing_subhead" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/bluetooth_dialog_padding" android:layout_marginStart="@dimen/bluetooth_dialog_padding" android:layout_marginEnd="@dimen/bluetooth_dialog_padding" />
        <TextView android:textAppearance="@*android:style/TextAppearance.Material.Subhead" android:textColor="0x1060126" android:gravity="top|bottom|center_vertical|fill_vertical|center|fill" android:id="@id/pairing_code_message" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/bluetooth_dialog_padding" android:text="@string/bluetooth_enter_passkey_msg" android:layout_marginStart="@dimen/bluetooth_dialog_padding" android:layout_marginEnd="@dimen/bluetooth_dialog_padding" />
        <TextView android:textSize="12sp" android:gravity="top|bottom|center_vertical|fill_vertical|center|fill" android:id="@id/phonebook_sharing_message" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/bluetooth_dialog_padding" android:text="@string/bluetooth_pairing_will_share_phonebook" android:layout_marginStart="@dimen/bluetooth_dialog_padding" android:layout_marginEnd="@dimen/bluetooth_dialog_padding" />
    </LinearLayout>
</ScrollView>
